Added: file download sample
